--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Garanta uma vida longa e cheia de saúde ao seu pet">
+    <link rel="stylesheet" href="style.css">
     <title>PetLife</title>
 </head>
 
