--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header>
         <a href="/index.html">
-            <img src="img/logo.svg" alt="">
+            <img src="img/logo-white.svg" alt="">
         </a>
 
         <nav>
