--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
             <div>
                 <h1>Garanta uma vida longa e cheia de alegria para o seu melhhor amigo</h1>
-                <p>A Petlige é o seu refúgio de confiança e cuidado do seu pet. Com profissionais 
+                <p class="paragrafo">A Petlige é o seu refúgio de confiança e cuidado do seu pet. Com profissionais 
                     dedicaddos e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada,
                      garantido o bem-estar, a saúde e felicidade dos seus animais de estimação.</p>
-                <a href="https://wa.me/5511939011304" target="_blank">Marque uma Consulta</a>
-                <a href="#clinica">Conheça a nossa clínica</a>
+                <a class="botao" href="https://wa.me/5511939011304" target="_blank">Marque uma Consulta</a>
+                <a class="botao-transparente" href="#clinica">Conheça a nossa clínica</a>
             </div>
         </section>
 
         <section id="clinica">
             <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
-                <p>
+                <p class="paragrafo">
                     Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
                     Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços
                     de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da
@@ -67,7 +67,7 @@
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
             <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-            <p>
+            <p class="paragrafo">
                 Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
                 petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
                 deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
@@ -84,7 +84,7 @@
                <div>
                     <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
                     <img src="img/arrow-down.svg" alt="">
-                    <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias,
+                    <p class="paragrafo">A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias,
                     tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de
                     pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados
                     para garantir a saúde e o bem-estar do seu pet.
@@ -93,7 +93,7 @@
                <div>
                 <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                   A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
                   pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
                   diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
@@ -111,7 +111,7 @@
               <div>
                 <h3>A clínica oferece serviços de banho e tosa?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                   Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
                   profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
                   técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
