--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <a class="botao" href="https://wa.me/5511939011304" target="_blank">Marque uma Consulta</a>
                 <a class="botao-transparente" href="#clinica">Conheça a nossa clínica</a>
             </div>
+
+            <img class="absolute" src="img/shape.svg" alt="">
         </section>
 
         <section id="clinica">
