--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
                     para garantir a saúde e o bem-estar do seu pet.
                     </p>
                </div>
-               <div>
-                <h3>Quais espécies de animais a clínica veterinária atende?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                  A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
-                  pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
-                  diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
-                </p>
-              </div>
-              <div>
+               <div class="duvida">
+                    <h3>Quais espécies de animais a clínica veterinária atende?</h3>
+                    <img src="img/arrow-down.svg" alt="">
+                    <p class="paragrafo">
+                    A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
+                    pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
+                    diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
+                    </p>
+                </div>
+              <div class="duvida">
                 <h3>A clínica da PetLife possui serviços de emergência?</h3>
                 <img src="img/arrow-down.svg" alt="">
                 <p>
@@ -110,7 +110,7 @@
                   ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                 </p>
               </div>
-              <div>
+              <div class="duvida">
                 <h3>A clínica oferece serviços de banho e tosa?</h3>
                 <img src="img/arrow-down.svg" alt="">
                 <p class="paragrafo">
