estilizacao do footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         
         <div>
-            <strong>Links rápidos</strong>
+            <strong class="titulo">Links rápidos</strong>
             <nav>
                 <a href="#inicio">Início</a>
                 <a href="#clinica">Clínica</a>
@@ -141,7 +141,7 @@
         </div>
         
         <div id="contatos">
-            <strong>Encontre-nos</strong>
+            <strong class="titulo">Encontre-nos</strong>
             <p>WhatsApp: <a href="https://wa.me/5511939011304" target="_blank"> (22) 98765-4321</a></p>
             <p>Email: <a href="mailto:petlife@gmail.com" target="_blank">contato@petlife.com</a></p>
             <p>Endereço: avenida 7 de maio, 22</p>
