--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p>Endereço: avenida 7 de maio, 22</p>
         </div>
     </footer>
-    <div>
+    <div id="copyright">
         Desenvolvido por <a href="https://github.com/matheuswq17" target="_blank">Matheus Xavier</a>
     </div>
 </body>
