--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header>
         <a href="/index.html">
-            <img src="img/logo-white.svg" alt="">
+            <img src="img/logo-white.svg" alt="PetLife">
         </a>
 
         <nav>
@@ -150,5 +150,7 @@
     <div id="copyright">
         Desenvolvido por <a href="https://github.com/matheuswq17" target="_blank">Matheus Xavier</a>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
